fixed header styling and spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -118,29 +118,22 @@ body {
 
 header {
   color: #fff;
-  background-color: #003550;
-  padding: 20px 30px 20px;
-  width: 100%;
-}
-
-.App-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 100vw;
-  margin: 0 auto;
+  background-color: #00527c;
+  padding: 30px;
 }
 
 header h1 {
-  font-size: 2.5em;
+  font-size: 3em;
+  font-weight: 500;
   flex: 1;
   text-align: center;
-  padding-left: 20px;
+  padding: 0px;
 }
 
 nav {
   position: absolute;
-  right: 30px; /* Adjust the right position as needed */
+  right: 50px; /* Adjust the right position as needed */
+  top: 65px;
   transform: translateY(-50%);
 }
 
@@ -152,7 +145,7 @@ nav ul {
 nav a {
   color: #fff;
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 1.4em;
 }
 
 nav a:hover {
@@ -195,6 +188,10 @@ nav a:hover {
   nav {
     position: relative;
     right: 0; /* Adjust the right position as needed */
+  }
+
+  nav {
+    top: 20px;
   }
 
   .page-container {
